eliminated left padding on footer to fix social media link alignment.

--- a/client/src/components/Footer/style.css
+++ b/client/src/components/Footer/style.css
@@ -63,5 +63,7 @@ padding: 0px 8px 0px 0px;
   }
   .footer {
     text-align: center;
+    padding: 15px 0px 0px 0px;
+
   }
 }
